# Lite-Agent-Beta-Gemini-CLI-Harness-

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARNESS_CONTRACT.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
docs/: Python_Agent_CLI_Report.md  Python_Agent_CLI_Report_Extended.md
docs/source/: conf.py  index.rst
docs/source/api/: lite_agent.rst
host/launchd/: com.esl.harness.plist
host/runit/: esl-harness-run
host/systemd/: esl-harness.service
host/windows/: README.md  build.sh  installer.nsi
src/lite_agent/: agent_core.py  cli.py  ipc.py  ml_utils.py  model_state_saver.py
tests/: test_example.py
