[project]
name = "lite-agent"
version = "0.1.0"
description = "A lightweight CLI harness for Gemini AI agents."
authors = [{name = "Gemini Agent", email = "gemini-agent@google.com"}]
dependencies = [
    "click",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
lite-agent = "src.lite_agent.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"